--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
 <style>
-body {
-  background-color: powderblue;
+
+table, th, td {
+  border: 1px solid black;}
+th, td {
+  background-color: #96D4D4;}
+  
+  
+    background-color: powderblue;
 }
 h1 {
   color: blue;
@@ -14,15 +18,38 @@ h1 {
 p {
   color: red;
 }
+
+
 </style>
-<title>Save The People</title>
-</head>
+
 <body>
+
+
+<table style="width:100%">
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+    <tr>
+    <td>Peter Macmofin</td>
+    <td>Mario Juda</td>
+    <td>Francia</td>
+  </tr>
+    <tr>
+    <td>Centro comercial Chanse</td>
+    <td>Francisco Roberto</td>
+    <td>Honduras</td>
+  </tr>
+</table>
+
+<title>Save The People</title>
+
 <body style="background-color:powderblue;">
 
 <h1>Campaña para ayudar a las personas con necesidad.</h1>
 <p>Esta es una pagina web destinada parael apoyo de personas con necesidades de hambre o deshidratacion. Tambien nos enfocamos de tratamientos de otras enfermedades basicas..</p>
-
+<img src="1.jpg">
 <img src="https://media.istockphoto.com/photos/healthy-lifestyle-picture-id1187097120?k=20&m=1187097120&s=612x612&w=0&h=hThQGciQo4Mf1y44rW8WEFLHUGwIB2RMudBCSNSnmC8=">
 
 <iframe width="1424" height="652" src="https://www.youtube.com/embed/aUe_V6iBo0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
