--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+   
 <!DOCTYPE html>
 <html>
 <head>
@@ -23,7 +25,9 @@ p {
 </style>
 
 <body>
-
+<img src="1.jpg"style="width:500px;height:300px;">
+<img src="2.jpg"style="width:500px;height:300px;">
+<img src="3.jpg"style="width:500px;height:300px;">
 
 <table style="width:100%">
   <tr>
@@ -49,7 +53,8 @@ p {
 
 <h1>Campaña para ayudar a las personas con necesidad.</h1>
 <p>Esta es una pagina web destinada parael apoyo de personas con necesidades de hambre o deshidratacion. Tambien nos enfocamos de tratamientos de otras enfermedades basicas..</p>
-<img src="1.jpg">
+
+
 <img src="https://media.istockphoto.com/photos/healthy-lifestyle-picture-id1187097120?k=20&m=1187097120&s=612x612&w=0&h=hThQGciQo4Mf1y44rW8WEFLHUGwIB2RMudBCSNSnmC8=">
 
 <iframe width="1424" height="652" src="https://www.youtube.com/embed/aUe_V6iBo0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
